@@ -3,6 +3,9 @@ All notable changes to this project will be documented in this file.
 
 ## [1.31] 2020-18-12
 
+### Added
+  - Worksheet#table
+
 ## [1.30] 2020-18-11
 
 ## [1.29] 2020-05-11
